added my banner section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,28 @@
             </ul>
             <div><button class="btn">Get Early Access</button></div>
         </nav>
+
+        <section id="banner">
+            <div class="banner-container">
+                <div class="banner-information">
+                    <p>Early Access Now Open</p>
+                </div>
+                <div class="banner-heading">
+                    <h1 class="heading1">Structured Thinking,</h1>
+                    <h1 class="heading2">Not just note-taking.</h1>
+                </div>
+                <div class="banner-text">
+                    <p class="text1">A private space to store notes, links, and learning summaries — designed to</p>
+                      <p>help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+                </div>
+                <div class="banner-button">
+                    <div><button class="btn">Start Building Your Vault</button></div>
+                    <div><button class="btn">See How It Works</button></div>
+                </div>
+
+            </div>
+
+        </section>
     </header>
 
 </body>
