added some features of producct

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My first website</title>
     <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -34,17 +34,54 @@
                 </div>
                 <div class="banner-text">
                     <p class="text1">A private space to store notes, links, and learning summaries — designed to</p>
-                      <p>help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+                    <p>help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
                 </div>
                 <div class="banner-button">
                     <div><button class="btn">Start Building Your Vault</button></div>
-                    <div><button class="btn">See How It Works</button></div>
+                    <div><button class="btn ">See How It Works</button></div>
                 </div>
 
             </div>
 
         </section>
     </header>
+
+    <section id="features">
+        <div class="features-container">
+            <div class="features-heading">
+                <h2>
+                    Notes don't fail, Structure does.</h2>
+                <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+            </div>
+
+        </div>
+        <div class="card">
+            <div class="card1">
+                <div class="card-img"><img src="./assets/Vector.png" alt=""></div>
+                <h4>Scattered notes</h4>
+                <p>Your ideas live in 10 different apps, none of them connected.</p>
+            </div>
+            <div class="card1">
+                <div class="card-img"><img src="./assets/Bookmarks.png" alt=""></div>
+                <h4>Bookmark overload</h4>
+                <p>Hundreds of saved links you'll never revisit or remember.</p>
+            </div>
+            <div class="card1">
+                <div class="card-img"><img src="./assets/Brain.png" alt=""></div>
+                <h4>No idea connections</h4>
+                <p>Insights stay isolated, never building into bigger understanding.</p>
+            </div>
+            <div class="card1">
+                <div class="card-img"><img src="./assets/Info.png" alt=""></div>
+                <h4>Forgetting what
+                    you learned</h4>
+                <p>Knowledge fades because there's no system to retain it.</p>
+            </div>
+
+
+        </div>
+
+    </section>
 
 </body>
 
