added the solution page in website

--- a/index.html
+++ b/index.html
@@ -83,6 +83,45 @@
 
     </section>
 
+    <section id="solution">
+        <div class="solution-container">
+            <div class="slution-img">
+                <img src="./assets/knowledge.png" alt="">
+            </div>
+            <div class="solution-content">
+                <p class="solution-content-heading">The Solution</p>
+                <h2>Your second brain,<br>
+                    structured by design.</h2>
+                <p>Personal Knowledge Vault isn't another note-taking app. z<br>It's a thinking environment where every
+                    note, link, and summary <br>becomes part of an interconnected web of understanding.</p>
+                <div class="list-align">
+                    <div class="flex">
+                        <div><img src="./assets/CheckCircle.png" alt=""></div>
+                        <div><img src="./assets/CheckCircle.png" alt=""></div>
+                        <div><img src="./assets/CheckCircle.png" alt=""></div>
+                        <div><img src="./assets/CheckCircle.png" alt=""></div>
+                    </div>
+                    <ul>
+                        <li>
+                            Capture ideas with structure built-in
+                            from day one
+                        </li>
+                        <li>
+                            Capture ideas with structure built-in from day one
+                        </li>
+                        <li>
+                            Build lasting knowledge through reflection prompts
+                        </li>
+                        <li>
+                            Find anything instantly with semantic search
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 </body>
 
 </html>
