added challanging part of my first website

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <p>help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
                 </div>
                 <div class="banner-button">
-                    <div><button class="btn">Start Building Your Vault</button></div>
+                    <div><button class="btn">Start Building Your Vault<img src="./assets/ArrowRight.png" alt=""></button></div>
                     <div><button class="btn ">See How It Works</button></div>
                 </div>
 
@@ -119,6 +119,19 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section id="challenge">
+        <div class="challenge-container">
+            <div>
+                <h2>Ready to think more clearly?</h2>
+                <p>Join thousands of learners who are building their personal knowledge vaults.<br>Start free, no credit
+                    card required.</p>
+            </div>
+            <div><button class="btn">Get Early Access<img src="./assets/ArrowRight.png" alt=""></button></div>
+            <p class="p-under">Free during early access • No credit card needed</p>
+        </div>
+
     </section>
 
 
