completed footer of webpage

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                     <p>help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
                 </div>
                 <div class="banner-button">
-                    <div><button class="btn">Start Building Your Vault<img src="./assets/ArrowRight.png" alt=""></button></div>
+                    <div><button class="btn">Start Building Your Vault<img src="./assets/ArrowRight.png"
+                                alt=""></button></div>
                     <div><button class="btn ">See How It Works</button></div>
                 </div>
 
@@ -54,33 +55,33 @@
                 <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
             </div>
 
+
+            <div class="card">
+                <div class="card1">
+                    <div class="card-img"><img src="./assets/Vector.png" alt=""></div>
+                    <h4>Scattered notes</h4>
+                    <p>Your ideas live in 10 different apps, none of them connected.</p>
+                </div>
+                <div class="card1">
+                    <div class="card-img"><img src="./assets/Bookmarks.png" alt=""></div>
+                    <h4>Bookmark overload</h4>
+                    <p>Hundreds of saved links you'll never revisit or remember.</p>
+                </div>
+                <div class="card1">
+                    <div class="card-img"><img src="./assets/Brain.png" alt=""></div>
+                    <h4>No idea connections</h4>
+                    <p>Insights stay isolated, never building into bigger understanding.</p>
+                </div>
+                <div class="card1">
+                    <div class="card-img"><img src="./assets/Info.png" alt=""></div>
+                    <h4>Forgetting what
+                        you learned</h4>
+                    <p>Knowledge fades because there's no system to retain it.</p>
+                </div>
+
+
+            </div>
         </div>
-        <div class="card">
-            <div class="card1">
-                <div class="card-img"><img src="./assets/Vector.png" alt=""></div>
-                <h4>Scattered notes</h4>
-                <p>Your ideas live in 10 different apps, none of them connected.</p>
-            </div>
-            <div class="card1">
-                <div class="card-img"><img src="./assets/Bookmarks.png" alt=""></div>
-                <h4>Bookmark overload</h4>
-                <p>Hundreds of saved links you'll never revisit or remember.</p>
-            </div>
-            <div class="card1">
-                <div class="card-img"><img src="./assets/Brain.png" alt=""></div>
-                <h4>No idea connections</h4>
-                <p>Insights stay isolated, never building into bigger understanding.</p>
-            </div>
-            <div class="card1">
-                <div class="card-img"><img src="./assets/Info.png" alt=""></div>
-                <h4>Forgetting what
-                    you learned</h4>
-                <p>Knowledge fades because there's no system to retain it.</p>
-            </div>
-
-
-        </div>
-
     </section>
 
     <section id="solution">
@@ -133,7 +134,22 @@
         </div>
 
     </section>
+    <footer>
+        <section class="footer-container">
+            <div class="logo"><img src="./assets/logo-footer.png" alt=""></div>
+            <div class="social">
+                <p>social Link</p>
+                <div class="social-img">
+                    <div> <img src="./assets/Frame 1171277687.png" alt=""></div>
+                    <div><img src="./assets/Frame 1171277689.png" alt=""></div>
+                    <div> <img src="./assets/Frame 1171277690.png" alt=""></div>
+                </div>
+            </div>
 
+        </section>
+        <hr>
+        <div class="copyright"> © 2026 Personal Knowledge Vault. All rights reserved.</div>
+    </footer>
 
 </body>
 
