fixed an icon, and website has completly done

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body class="my-font">
+    <!-- header section start -->
     <header id="header-section">
         <nav class="nav-container">
             <div class="img1">
@@ -26,6 +27,7 @@
         <section id="banner">
             <div class="banner-container">
                 <div class="banner-information">
+                    <div><img src="./assets/Group 5.png" alt=""></div>
                     <p>Early Access Now Open</p>
                 </div>
                 <div class="banner-heading">
@@ -39,14 +41,15 @@
                 <div class="banner-button">
                     <div><button class="btn">Start Building Your Vault<img src="./assets/ArrowRight.png"
                                 alt=""></button></div>
-                    <div><button class="btn ">See How It Works</button></div>
+                    <div><button class="btn "><img src="./assets/Play.png" alt="">See How It Works</button></div>
                 </div>
 
             </div>
 
         </section>
     </header>
-
+    <!-- header section end -->
+    <!-- features section start -->
     <section id="features">
         <div class="features-container">
             <div class="features-heading">
@@ -83,7 +86,9 @@
             </div>
         </div>
     </section>
+    <!-- features section End -->
 
+    <!-- solution section start -->
     <section id="solution">
         <div class="solution-container">
             <div class="slution-img">
@@ -121,7 +126,9 @@
             </div>
         </div>
     </section>
+    <!-- solution section end -->
 
+    <!-- challenge section start -->
     <section id="challenge">
         <div class="challenge-container">
             <div>
@@ -134,6 +141,9 @@
         </div>
 
     </section>
+    <!-- challenge section end -->
+
+    <!-- footer section start -->
     <footer>
         <section class="footer-container">
             <div class="logo"><img src="./assets/logo-footer.png" alt=""></div>
@@ -150,7 +160,7 @@
         <hr>
         <div class="copyright"> © 2026 Personal Knowledge Vault. All rights reserved.</div>
     </footer>
-
+    <!-- footer section end -->
 </body>
 
 </html>
